# soval

./: .gitignore  README.md  soval.cabal
src/: Client.hs  Main.hs
