name:               soval
version:            0.1.0.0
category:           Web
build-type:         Simple
cabal-version:      >=2.0

executable soval
  main-is:          Main.hs
  build-depends:    base ^>=4.14.3
                  , aeson
                  , bytestring
                  , Spock
                  , Spock-core
                  , http-types
                  , text
                  , mtl
                  , mr-env
  hs-source-dirs:   src
  default-language: Haskell2010
